@@ -2,8 +2,6 @@ package ca.bc.gov.educ.api.gradstudent.controller;
 
 import ca.bc.gov.educ.api.gradstudent.model.dto.*;
 import ca.bc.gov.educ.api.gradstudent.messaging.jetstream.Publisher;
-import ca.bc.gov.educ.api.gradstudent.model.entity.GraduationStudentRecordHistoryEntity;
-import ca.bc.gov.educ.api.gradstudent.model.entity.StudentOptionalProgramHistoryEntity;
 import ca.bc.gov.educ.api.gradstudent.service.GraduationStatusService;
 import ca.bc.gov.educ.api.gradstudent.service.HistoryService;
 import ca.bc.gov.educ.api.gradstudent.util.EducGradStudentApiUtils;
@@ -230,7 +228,7 @@ public class GraduationStatusControllerTest {
         Mockito.when(authentication.getDetails()).thenReturn(details);
         SecurityContextHolder.setContext(securityContext);
 
-        Mockito.when(graduationStatusService.getStudentGradOptionalProgram(studentID, null)).thenReturn(Arrays.asList(gradStudentOptionalProgram));
+        Mockito.when(graduationStatusService.getStudentGradOptionalProgram(studentID, null)).thenReturn(List.of(gradStudentOptionalProgram));
         graduationStatusController.getStudentGradOptionalPrograms(studentID.toString());
         Mockito.verify(graduationStatusService).getStudentGradOptionalProgram(studentID, null);
     }
@@ -381,9 +379,27 @@ public class GraduationStatusControllerTest {
         graduationStatus.setSchoolOfRecord("12345678");
         graduationStatus.setRecalculateGradStatus("Y");
 
-        Mockito.when(graduationStatusService.getStudentsForGraduation()).thenReturn(Arrays.asList(graduationStatus));
+        Mockito.when(graduationStatusService.getStudentsForGraduation()).thenReturn(List.of(graduationStatus));
         graduationStatusController.getStudentsForGraduation();
         Mockito.verify(graduationStatusService).getStudentsForGraduation();
+    }
+
+    @Test
+    public void testGetStudentsForProjectedGraduation() {
+        // ID
+        UUID studentID = UUID.randomUUID();
+        String pen = "123456789";
+
+        GraduationStudentRecord graduationStatus = new GraduationStudentRecord();
+        graduationStatus.setStudentID(studentID);
+        graduationStatus.setPen(pen);
+        graduationStatus.setStudentStatus("CUR");
+        graduationStatus.setSchoolOfRecord("12345678");
+        graduationStatus.setRecalculateGradStatus("Y");
+
+        Mockito.when(graduationStatusService.getStudentsForProjectedGraduation()).thenReturn(List.of(graduationStatus));
+        graduationStatusController.getStudentsForProjectedGraduation();
+        Mockito.verify(graduationStatusService).getStudentsForProjectedGraduation();
     }
 
     @Test
@@ -467,7 +483,6 @@ public class GraduationStatusControllerTest {
 
         Authentication authentication = Mockito.mock(Authentication.class);
         OAuth2AuthenticationDetails details = Mockito.mock(OAuth2AuthenticationDetails.class);
-        // Mockito.whens() for your authorization object
         SecurityContext securityContext = Mockito.mock(SecurityContext.class);
         Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         Mockito.when(authentication.getDetails()).thenReturn(details);
@@ -511,7 +526,6 @@ public class GraduationStatusControllerTest {
     public void testGetOptionalProgramStudentHistoryByID() {
         Authentication authentication = Mockito.mock(Authentication.class);
         OAuth2AuthenticationDetails details = Mockito.mock(OAuth2AuthenticationDetails.class);
-        // Mockito.whens() for your authorization object
         SecurityContext securityContext = Mockito.mock(SecurityContext.class);
         Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         Mockito.when(authentication.getDetails()).thenReturn(details);
